# icp-toolset

./: CMakeLists.txt  README.md  ipc.py  ipc.vim  preprocessor.py
scripts/: preprocessor.py  visualize.py
src/: .iterative_closest_point.cpp.swp  iterative_closest_point.cpp
